Update order, fix some formatting

--- a/src/content/docs/reference/Uniforms/overview.mdx
+++ b/src/content/docs/reference/Uniforms/overview.mdx
@@ -13,48 +13,48 @@ Uniforms are values sent from the CPU, and as such they cannot change from one s
 ## Camera/Player
 | Uniform                                                                               | Type  | Value Range    | Description                                                        | Tag                                           |
 | ------------------------------------------------------------------------------------- | ----- | -------------- | ------------------------------------------------------------------ | --------------------------------------------- |
-| [cameraPosition](/reference/uniforms/camera#cameraposition)                           | vec3  |                | Position of the camera in world space                              |                                               |
-| [eyeAltitude](/reference/uniforms/camera#eyealtitude)                                 | float |                | Y coordinate of the player in blocks                               |                                               |
-| [cameraPositionFract](/reference/uniforms/camera#camerapositionfract)                 | vec3  | [0,1)          | Fractional component of the camera position in world space         | <Badge text="Iris Exclusive" variant="tip" /> |
-| [cameraPositionInt](/reference/uniforms/camera#camerapositionint)                     | ivec3 |                | Integer component of the camera position in world space            | <Badge text="Iris Exclusive" variant="tip" /> |
-| [previousCameraPosition](/reference/uniforms/camera#previouscameraposition)           | vec3  |                | Value of `cameraPosition` from the previous frame                  | <Badge text="Iris Exclusive" variant="tip" /> |
-| [previousCameraPositionFract](/reference/uniforms/camera#previouscamerapositionfract) | vec3  | [0,1)          | Value of `cameraPositionFract` from the previous frame             | <Badge text="Iris Exclusive" variant="tip" /> |
-| [previousCameraPositionInt](/reference/uniforms/camera#previouscamerapositionint)     | ivec3 |                | Value of `cameraPositionInt` from the previous frame               | <Badge text="Iris Exclusive" variant="tip" /> |
-| [eyePosition](/reference/uniforms/camera#eyeposition)                                 | vec3  |                | World space position of the player's head model                    | <Badge text="Iris Exclusive" variant="tip" /> |
-| [relativeEyePosition](/reference/uniforms/camera#relativeeyeposition)                 | vec3  |                | World space offset from the player head to the camera              | <Badge text="Iris Exclusive" variant="tip" /> |
-| [playerBodyVector](/reference/uniforms/camera#playerbodyvector)                       | vec3  | [0,1]          | World aligned direction of player model's body                     | <Badge text="Iris Exclusive" variant="tip" /> |
-| [playerLookVector](/reference/uniforms/camera#playerlookvector)                       | vec3  | [0,1]          | World aligned direction of player model's head                     | <Badge text="Iris Exclusive" variant="tip" /> |
-| [upPosition](/reference/uniforms/camera#upposition)                                   | vec3  | [0,100]        | Upwards direction in view space, length of 100                     |                                               |
-| [centerDepthSmooth](/reference/uniforms/camera#centerdepthsmooth)                     | float | [0,1]          | Depth buffer value at the center of the screen, smoothed over time |                                               |
-| [firstPersonCamera](/reference/uniforms/camera#firstpersoncamera)                     | bool  | `true`/`false` | Whether the player camera is in first person mode                  | <Badge text="Iris Exclusive" variant="tip" /> |
+| [cameraPosition](/reference/uniforms/camera#cameraposition)                           | `vec3`  |                | Position of the camera in world space                              |                                               |
+| [eyeAltitude](/reference/uniforms/camera#eyealtitude)                                 | `float` |                | Y coordinate of the player in blocks                               |                                               |
+| [cameraPositionFract](/reference/uniforms/camera#camerapositionfract)                 | `vec3`  | [0,1)          | Fractional component of the camera position in world space         | <Badge text="Iris Exclusive" variant="tip" /> |
+| [cameraPositionInt](/reference/uniforms/camera#camerapositionint)                     | `ivec3` |                | Integer component of the camera position in world space            | <Badge text="Iris Exclusive" variant="tip" /> |
+| [previousCameraPosition](/reference/uniforms/camera#previouscameraposition)           | `vec3`  |                | Value of `cameraPosition` from the previous frame                  | <Badge text="Iris Exclusive" variant="tip" /> |
+| [previousCameraPositionFract](/reference/uniforms/camera#previouscamerapositionfract) | `vec3`  | [0,1)          | Value of `cameraPositionFract` from the previous frame             | <Badge text="Iris Exclusive" variant="tip" /> |
+| [previousCameraPositionInt](/reference/uniforms/camera#previouscamerapositionint)     | `ivec3` |                | Value of `cameraPositionInt` from the previous frame               | <Badge text="Iris Exclusive" variant="tip" /> |
+| [eyePosition](/reference/uniforms/camera#eyeposition)                                 | `vec3`  |                | World space position of the player's head model                    | <Badge text="Iris Exclusive" variant="tip" /> |
+| [relativeEyePosition](/reference/uniforms/camera#relativeeyeposition)                 | `vec3`  |                | World space offset from the player head to the camera              | <Badge text="Iris Exclusive" variant="tip" /> |
+| [playerBodyVector](/reference/uniforms/camera#playerbodyvector)                       | `vec3`  | [0,1]          | World aligned direction of player model's body                     | <Badge text="Iris Exclusive" variant="tip" /> |
+| [playerLookVector](/reference/uniforms/camera#playerlookvector)                       | `vec3`  | [0,1]          | World aligned direction of player model's head                     | <Badge text="Iris Exclusive" variant="tip" /> |
+| [upPosition](/reference/uniforms/camera#upposition)                                   | `vec3`  | [0,100]        | Upwards direction in view space, length of 100                     |                                               |
+| [centerDepthSmooth](/reference/uniforms/camera#centerdepthsmooth)                     | `float` | [0,1]          | Depth buffer value at the center of the screen, smoothed over time |                                               |
+| [firstPersonCamera](/reference/uniforms/camera#firstpersoncamera)                     | `bool`  | `true`/`false` | Whether the player camera is in first person mode                  | <Badge text="Iris Exclusive" variant="tip" /> |
 
 ## Player Status
-| Uniform                                                               | Type  | Value Range    | Description                                                    | Tag                                                   |
-| --------------------------------------------------------------------- | ----- | -------------- | -------------------------------------------------------------- | ----------------------------------------------------- |
-| [isEyeInWater](/reference/uniforms/status#iseyeinwater)               | int   | `0`,`1`,`2`,`3 | Fluid that the camera is currently in                          |                                                       |
-| [isSpectator](/reference/uniforms/status#isspectator)                 | bool  | `true`/`false` | Whether the player is currently in spectator mode              | <Badge text="Iris Exclusive" variant="tip" />         |
-| [isRightHanded](/reference/uniforms/status#isrighthanded)             | bool  | `true`/`false` | Whether the player's main hand is set to right hand            | <Badge text="Iris Exclusive" variant="tip" />         |
-| [blindness](/reference/uniforms/status#blindness)                     | float | [0,1]          | Blindness effect multiplier                                    |                                                       |
-| [darknessFactor](/reference/uniforms/status#darknessfactor)           | float | [0,1]          | Strength of the darkness effect                                |                                                       |
-| [darknessLightFactor](/reference/uniforms/status#darknesslightfactor) | float | [0,1]          | Strength of the dimming effect from the darkness status effect |                                                       |
-| [nightVision](/reference/uniforms/status#nightvision)                 | float | [0,1]          | Night vision effect multiplier                                 |                                                       |
-| [playerMood](/reference/uniforms/status#playermood)                   | float | [0,1]          | Player mood value                                              |                                                       |
-| [constantMood](/reference/uniforms/status#constantmood)               | float | [0,1]          | `playerMood` but it doesn't reset at `1.0`                     | <Badge text="Iris Exclusive" variant="tip" />         |
-| [currentPlayerAir](/reference/uniforms/status#currentplayerair)       | float | [0,1]          | Normalized air the player has remaining                        | <Badge text="Iris Exclusive" variant="tip" />         |
-| [maxPlayerAir](/reference/uniforms/status#maxplayerair)               | float |                | Maximum player air when underwater                             | <Badge text="Iris Exclusive" variant="tip" />         |
-| [currentPlayerArmor](/reference/uniforms/status#currentplayerarmor)   | float | [0,1]          | Normalized armor player has equipped                           | <Badge text="Iris Exclusive" variant="tip" />         |
-| [maxPlayerArmor](/reference/uniforms/status#maxplayerarmor)           | float |                | Maximum player armor value                                     | <Badge text="Iris Exclusive" variant="tip" />         |
-| [currentPlayerHealth](/reference/uniforms/status#currentplayerhealth) | float | [0,1]          | Normalized health the player has remaining                     | <Badge text="Iris Exclusive" variant="tip" />         |
-| [maxPlayerHealth](/reference/uniforms/status#maxplayerhealth)         | float |                | Maximum player health value                                    | <Badge text="Iris Exclusive" variant="tip" />         |
-| [currentPlayerHunger](/reference/uniforms/status#currentplayerhunger) | float | [0,1]          | Normalized hunger level of player                              | <Badge text="Iris Exclusive" variant="tip" />         |
-| [maxPlayerHunger](/reference/uniforms/status#maxplayerhunger)         | float |                | Maximum player hunger value                                    | <Badge text="Iris Exclusive" variant="tip" />         |
-| [is_burning](/reference/uniforms/status#is_burning)                   | bool  | `true`/`false` | Whether the player is currently on fire                        | <Badge text="Optifine CU / Iris" variant="caution" /> |
-| [is_hurt](/reference/uniforms/status#is_hurt)                         | bool  | `true`/`false` | Whether the player is currently taking damage                  | <Badge text="Optifine CU / Iris" variant="caution" /> |
-| [is_invisible](/reference/uniforms/status#is_invisible)               | bool  | `true`/`false` | Whether the player is invisible                                | <Badge text="Optifine CU / Iris" variant="caution" /> |
-| [is_on_ground](/reference/uniforms/status#is_on_ground)               | bool  | `true`/`false` | Whether the player is currently touching the ground            | <Badge text="Optifine CU / Iris" variant="caution" /> |
-| [is_sneaking](/reference/uniforms/status#is_sneaking)                 | bool  | `true`/`false` | Whether the player is currently sneaking                       | <Badge text="Optifine CU / Iris" variant="caution" /> |
-| [is_sprinting](/reference/uniforms/status#is_sprinting)               | bool  | `true`/`false` | Whether the player is currently sprinting                      | <Badge text="Optifine CU / Iris" variant="caution" /> |
-| [hideGUI](/reference/uniforms/status#hidegui)                         | bool  | `true`/`false` | Whether the player's GUI is hidden                             |                                                       |
+| Uniform                                                               | Type  | Value Range     | Description                                                    | Tag                                                   |
+| --------------------------------------------------------------------- | ----- | --------------- | -------------------------------------------------------------- | ----------------------------------------------------- |
+| [isEyeInWater](/reference/uniforms/status#iseyeinwater)               | int   | `0`,`1`,`2`,`3` | Fluid that the camera is currently in                          |                                                       |
+| [isSpectator](/reference/uniforms/status#isspectator)                 | bool  | `true`/`false`  | Whether the player is currently in spectator mode              | <Badge text="Iris Exclusive" variant="tip" />         |
+| [isRightHanded](/reference/uniforms/status#isrighthanded)             | bool  | `true`/`false`  | Whether the player's main hand is set to right hand            | <Badge text="Iris Exclusive" variant="tip" />         |
+| [blindness](/reference/uniforms/status#blindness)                     | float | [0,1]           | Blindness effect multiplier                                    |                                                       |
+| [darknessFactor](/reference/uniforms/status#darknessfactor)           | float | [0,1]           | Strength of the darkness effect                                |                                                       |
+| [darknessLightFactor](/reference/uniforms/status#darknesslightfactor) | float | [0,1]           | Strength of the dimming effect from the darkness status effect |                                                       |
+| [nightVision](/reference/uniforms/status#nightvision)                 | float | [0,1]           | Night vision effect multiplier                                 |                                                       |
+| [playerMood](/reference/uniforms/status#playermood)                   | float | [0,1]           | Player mood value                                              |                                                       |
+| [constantMood](/reference/uniforms/status#constantmood)               | float | [0,1]           | `playerMood` but it doesn't reset at `1.0`                     | <Badge text="Iris Exclusive" variant="tip" />         |
+| [currentPlayerAir](/reference/uniforms/status#currentplayerair)       | float | [0,1]           | Normalized air the player has remaining                        | <Badge text="Iris Exclusive" variant="tip" />         |
+| [maxPlayerAir](/reference/uniforms/status#maxplayerair)               | float |                 | Maximum player air when underwater                             | <Badge text="Iris Exclusive" variant="tip" />         |
+| [currentPlayerArmor](/reference/uniforms/status#currentplayerarmor)   | float | [0,1]           | Normalized armor player has equipped                           | <Badge text="Iris Exclusive" variant="tip" />         |
+| [maxPlayerArmor](/reference/uniforms/status#maxplayerarmor)           | float |                 | Maximum player armor value                                     | <Badge text="Iris Exclusive" variant="tip" />         |
+| [currentPlayerHealth](/reference/uniforms/status#currentplayerhealth) | float | [0,1]           | Normalized health the player has remaining                     | <Badge text="Iris Exclusive" variant="tip" />         |
+| [maxPlayerHealth](/reference/uniforms/status#maxplayerhealth)         | float |                 | Maximum player health value                                    | <Badge text="Iris Exclusive" variant="tip" />         |
+| [currentPlayerHunger](/reference/uniforms/status#currentplayerhunger) | float | [0,1]           | Normalized hunger level of player                              | <Badge text="Iris Exclusive" variant="tip" />         |
+| [maxPlayerHunger](/reference/uniforms/status#maxplayerhunger)         | float |                 | Maximum player hunger value                                    | <Badge text="Iris Exclusive" variant="tip" />         |
+| [is_burning](/reference/uniforms/status#is_burning)                   | bool  | `true`/`false`  | Whether the player is currently on fire                        | <Badge text="Optifine CU / Iris" variant="caution" /> |
+| [is_hurt](/reference/uniforms/status#is_hurt)                         | bool  | `true`/`false`  | Whether the player is currently taking damage                  | <Badge text="Optifine CU / Iris" variant="caution" /> |
+| [is_invisible](/reference/uniforms/status#is_invisible)               | bool  | `true`/`false`  | Whether the player is invisible                                | <Badge text="Optifine CU / Iris" variant="caution" /> |
+| [is_on_ground](/reference/uniforms/status#is_on_ground)               | bool  | `true`/`false`  | Whether the player is currently touching the ground            | <Badge text="Optifine CU / Iris" variant="caution" /> |
+| [is_sneaking](/reference/uniforms/status#is_sneaking)                 | bool  | `true`/`false`  | Whether the player is currently sneaking                       | <Badge text="Optifine CU / Iris" variant="caution" /> |
+| [is_sprinting](/reference/uniforms/status#is_sprinting)               | bool  | `true`/`false`  | Whether the player is currently sprinting                      | <Badge text="Optifine CU / Iris" variant="caution" /> |
+| [hideGUI](/reference/uniforms/status#hidegui)                         | bool  | `true`/`false`  | Whether the player's GUI is hidden                             |                                                       |
 
 ## Screen/System
 | Uniform                                                           | Type  | Value Range         | Description                                                    | Tag                                           |
@@ -103,7 +103,7 @@ Uniforms are values sent from the CPU, and as such they cannot change from one s
 | [eyeBrightnessSmooth](/reference/uniforms/world#eyebrightnesssmooth)     | ivec2 | [0-240]     | `eyeBrightness` smoothed over time by `eyeBrightnessHalfLife` |                                               |
 
 ## Biome/Dimension
-| Uniform                                                              | Type  | Value Range    | Description                                                         | Supported Versions                                    |
+| Uniform                                                              | Type  | Value Range    | Description                                                         | Tag                                                   |
 | -------------------------------------------------------------------- | ----- | -------------- | ------------------------------------------------------------------- | ----------------------------------------------------- |
 | [biome](/reference/uniforms/biome#biome)                             | int   |                | Biome currently occupied by the player                              | <Badge text="Optifine CU / Iris" variant="caution" /> |
 | [biome_category](/reference/uniforms/biome#biome_category)           | int   |                | Category of the biome currently occupied by the player              | <Badge text="Optifine CU / Iris" variant="caution" /> |
@@ -119,7 +119,7 @@ Uniforms are values sent from the CPU, and as such they cannot change from one s
 | [logicalHeightLimit](/reference/uniforms/biome#logicalheightlimit)   | int   |                | Logical height of the current dimension                             | <Badge text="Iris Exclusive" variant="tip" />         |
 
 ## Rendering
-| Uniform                                                    | Type  | Value Range            | Description                                                       | Supported Versions |
+| Uniform                                                    | Type  | Value Range            | Description                                                       | Tag                |
 | ---------------------------------------------------------- | ----- | ---------------------- | ----------------------------------------------------------------- | ------------------ |
 | [near](/reference/uniforms/rendering#near)                 | float | `0.05`                 | Near clipping plane distance                                      |                    |
 | [far](/reference/uniforms/rendering#far)                   | float | (0,-)                  | Current render distance in blocks                                 |                    |
@@ -138,7 +138,7 @@ Uniforms are values sent from the CPU, and as such they cannot change from one s
 | [fogShape](/reference/uniforms/rendering#fogshape)         | int   | 0,1                    | Fog shape used for vanilla fog                                    |                    |
 
 ## Matrices
-| Uniform                                                                             | Type  | Value Range | Description                                                            | Supported Versions |
+| Uniform                                                                             | Type  | Value Range | Description                                                            | Tag                |
 | ----------------------------------------------------------------------------------- | ----- | ----------- | ---------------------------------------------------------------------- | ------------------ |
 | [gbufferModelView](/reference/uniforms/matrices#gbuffermodelview)                   | mat4  |             | Player space to view space in general                                  |                    |
 | [gbufferModelViewInverse](/reference/uniforms/matrices#gbuffermodelviewinverse)     | mat4  |             | Converts from view space to player space in general                    |                    |
